Fix hidden field visibility in Universal Editor
- Change CSS selector from body.editor to html.adobe-ue-preview
- Hidden fields now properly visible in Universal Editor

--- a/blocks/form/form.css
+++ b/blocks/form/form.css
@@ -188,7 +188,7 @@
 }
 
 /* Show hidden fields in Universal Editor */
-body.editor .form .form-field-hidden {
+html.adobe-ue-preview .form .form-field-hidden {
   display: block;
 }
 
